--- a/styles.css
+++ b/styles.css
@@ -457,3 +457,62 @@ form button[type="submit"]:hover {
 }
 
 
+/* Media queries for responsiveness */
+@media screen and (max-width: 768px) {
+    /* Adjustments for smaller screens */
+    .header-section {
+        padding: 30px 0;
+    }
+    .header-section h1 {
+        font-size: 18px;
+    }
+    .header-section h2 {
+        font-size: 36px;
+    }
+    .header-section p {
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    .services {
+        flex-direction: column;
+        align-items: center;
+    }
+    .left-column, .right-column {
+        max-width: 100%;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .carousel-indicators {
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 20px;
+    }
+    .carousel-indicators li {
+        margin: 0 3px;
+    }
+    .carousel-main {
+        flex-direction: column;
+    }
+    .card-container {
+        margin: 0 auto 20px auto;
+    }
+    .project-item {
+        margin-bottom: 30px;
+    }
+    .project-item h5 {
+        font-size: 16px;
+    }
+    .project-item p {
+        font-size: 13px;
+    }
+    .container-fluid {
+        padding: 30px 0;
+    }
+    .client-feedback {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .client-name {
+        padding-right: 20px;
+    }
+}
